--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,37 @@
-[project]
-name = "cli-standard-kit"
-version = "1.0.1"
-description = "Unified CLI project template and initializer"
-readme = "README.md"
-license = { text = "MIT" }
-authors = [{ name = "Cenk Kabahasanoglu" }]
-requires-python = ">=3.9"
-dependencies = ["cookiecutter>=2.5"]
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[project.scripts]
-cli-standard-kit = "cli_standard_kit.__main__:main"
+[project]
+name = "cli-commons"
+version = "1.0.2"
+description = "Reusable CLI utilities for consistent command-line interfaces"
+readme = "README.md"
+license = {text = "MIT"}
+authors = [{name = "Cenk Kabahasanoglu", email = "me@c3nk.com"}]
+requires-python = ">=3.9"
+keywords = ["cli", "command-line", "utilities", "colors", "logging", "batch-processing"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: System :: Shells",
+]
+
+[project.urls]
+Homepage = "https://github.com/c3nk/cli-commons"
+Documentation = "https://github.com/c3nk/cli-commons#readme"
+Repository = "https://github.com/c3nk/cli-commons.git"
+Issues = "https://github.com/c3nk/cli-commons/issues"
+
+[tool.setuptools]
+packages = ["cli_commons"]
+
+[tool.setuptools.package-data]
+cli_commons = ["py.typed"]
