--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cli-standard-kit"
-version = "1.0.2"
-description = "Reusable CLI utilities for consistent command-line interfaces"
+version = "1.0.3"
+description = "Reusable CLI framework and utilities for consistent command-line interfaces"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [{name = "Cenk Kabahasanoglu", email = "me@c3nk.com"}]
 requires-python = ">=3.9"
-keywords = ["cli", "command-line", "utilities", "colors", "logging", "batch-processing"]
+keywords = ["cli", "command-line", "framework", "utilities", "colors", "logging", "batch-processing", "argparse"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
