--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "cli-standard-kit"
 version = "1.0.3"
 description = "Reusable CLI framework and utilities for consistent command-line interfaces"
 readme = "README.md"
-license = {text = "MIT"}
+# License specified in classifiers for compatibility
 authors = [{name = "Cenk Kabahasanoglu", email = "me@c3nk.com"}]
 requires-python = ">=3.9"
 keywords = ["cli", "command-line", "framework", "utilities", "colors", "logging", "batch-processing", "argparse"]
