--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md
-recursive-include cli_commons *.py
-include cli_commons/py.typed
+recursive-include cli_standard_kit *.py
+include cli_standard_kit/py.typed
